swapped admin to the category to check what is wrong, modified the left button stuff, need to check whether timeout is not activated for control

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,7 +155,7 @@
     left: 20px;
     bottom: 20px;
     align-items: center;
-    background: cyan;
+    background: white;
     border-radius: 22px;
 }
 .left-button {
