--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,20 @@
     margin-right:20px;
 }
 
+.layout-two {
+    margin-left:20px;
+    margin-right:20px;
+}
+
 .intro-layout {
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.robot-layout {
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,6 +42,12 @@
     height: 100vh;
     line-height: 100vh;
     text-align: center;
+}
+
+.vertical-center-relative {
+    text-align: center;
+    height: 60vh;
+    line-height: 60vh;
 }
 
 .area-check {
@@ -58,13 +76,25 @@
 
 .accent-green {
     font-weight: bold;
+    color: green;
+    text-align: center;
+    font-size: 18px;
+}
+
+.accent-red {
+    font-weight: bold;
     color: red;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .shopping-header {
     font-weight: bold;
+    font-size: 16px;
+}
+
+.header-text {
+    width: 40vw;
     font-size: 16px;
 }
 
@@ -211,6 +241,10 @@
     background-color: #6a760c;
 }
 
+.robot-header {
+    padding: 20px;
+}
+
 .detailed-header {
     display: flex;
     flex-direction: row;
@@ -224,6 +258,11 @@
 .detailed-body {
     padding-top: 15px;
     padding-bottom: 110px;
+}
+
+.robot-body {
+    padding-top: 15px;
+    padding-bottom: 150px;
 }
 
 .general-body {
