forgot display flex and horizontal center

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -359,6 +359,7 @@
 
 .recommend-image-surrounding {
     max-width: 35vw;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
