--- a/client/src/App.css
+++ b/client/src/App.css
@@ -362,6 +362,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .recommend-image {
