--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,6 +168,34 @@
 .cart-button:hover{
     filter: invert(54%) sepia(92%) saturate(796%) hue-rotate(29deg) brightness(99%) contrast(87%);
 }
+.cart-button-count-container {
+    position: relative;
+    right: 15px;
+    bottom: 75px;
+
+}
+.cart-button-surrounding {
+    position: absolute;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-color: white;
+    border-top: 2px solid transparent;
+    border-left: 2px solid #6a760c;
+    border-right: 2px solid #6a760c;
+    border-bottom: 2px solid #6a760c;
+    transform: rotate(135deg);
+}
+.cart-button-text {
+    font-weight: bold;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    width: 30px;
+    left: 0px;
+    top: 3px;
+}
 .item-in-cart-content{
     background-color: white;
     padding: 5px;
