--- a/client/src/App.css
+++ b/client/src/App.css
@@ -439,6 +439,13 @@
     align-items: center;
 }
 
+.table-class {
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    text-align: center;
+}
+
 table, th, td {
     border: 1px solid black;
     padding: 2px;
