--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,6 +138,9 @@
     background: white;
     border: 2px solid #6a760c;
     border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
 
 .homepage-button:hover {
