update font color on hover, and return to border 2px

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -136,15 +136,18 @@
 
 .homepage-button {
     background: white;
-    border: 1px solid #6a760c;
+    border: 2px solid #6a760c;
     border-radius: 5px;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 5px;
+    font: 18px
 }
 
 .homepage-button:hover {
     background: #6a760c;
+    color: white;
+
 }
 
 .icon-button {
